--- a/src/main/resources/templates/head/head.html
+++ b/src/main/resources/templates/head/head.html
@@ -74,5 +74,9 @@
     <script src="https://kit.fontawesome.com/ebccd8f794.js" crossorigin="anonymous"></script>
      <!-- swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <!-- aos -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    
 </head>
 </html>
