--- a/src/main/resources/static/css/myBand.css
+++ b/src/main/resources/static/css/myBand.css
@@ -233,3 +233,9 @@ div.bandChat_listContent{
     font-size: 20px;
    	font-weight: bold;
 }
+
+/* 밴드 피드 댓글 작성 스타일 */
+div.bandFeedCommentAllBox{
+	height: 50px;
+	overflow : hidden;
+}
