--- a/src/main/resources/templates/thymeleaf/band/bandFeedWrite.html
+++ b/src/main/resources/templates/thymeleaf/band/bandFeedWrite.html
@@ -39,8 +39,9 @@
    }
    
     $(document).ready(function() {
+    	var editorHeight = $(window).height() * 0.6;
         $('#summernote').summernote({
-           minHeight: 500,             // 최소 높이
+        	minHeight: editorHeight + "px",            // 최소 높이
               maxHeight: null,             // 최대 높이
               focus: true,                  // 에디터 로딩후 포커스를 맞출지 여부
               lang: "ko-KR",               // 한글 설정
